# Django

./: .gitignore  pyproject.toml  readme.md
shop/: db.json  db.sqlite3
shop/app_auth/: models.py  serializers.py  urls.py  views.py
shop/app_auth/migrations/: 0001_initial.py
shop/app_basket/: models.py  serializers.py  urls.py  views.py
shop/app_basket/migrations/: 0001_initial.py
shop/app_catalog/: admin.py  models.py  serializers.py  urls.py  views.py
shop/app_catalog/migrations/: 0001_initial.py  0002_alter_category_image.py
shop/app_home/: urls.py  views.py
shop/app_order/: models.py  serializers.py  urls.py  views.py
shop/app_order/migrations/: 0001_initial.py  0002_alter_order_status.py
shop/app_payment/: urls.py  views.py
shop/app_product/: admin.py  models.py  serializers.py  urls.py  views.py
shop/app_product/migrations/: 0001_initial.py  0002_alter_product_category.py  0002_alter_product_full_description_and_more.py  0002_alter_productimage_product_and_more.py  0003_alter_product_category.py  0003_product_limited.py  0003_remove_productimage_src_productimage_image_and_more.py  0004_alter_productreview_product_and_more.py  0004_product_date_from_product_date_to_product_sale_price.py  0005_alter_productimage_image.py  0005_rename_date_from_product_datefrom_and_more.py  0006_alter_productreview_date.py  0006_rename_datefrom_product_date_from_and_more.py  (+3 more)
shop/app_profile/: urls.py  views.py
shop/app_tags/: urls.py  views.py
shop/app_user/: admin.py  models.py  serializers.py  urls.py  views.py
shop/shop/: settings.py  urls.py
(+7 files in other folders)
