[tool.poetry]
name = "python-django-diploma"
version = "0.1.0"
description = ""
authors = ["Alex <Lelikk86@gmail.com>"]
readme = "README.md"
packages = [{include = "python_django_diploma"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
